--- a/finance_system_v1/fms/Revenue Tracking v1.5 - FE only/revenue_tracking.html
+++ b/finance_system_v1/fms/Revenue Tracking v1.5 - FE only/revenue_tracking.html
@@ -7,7 +7,7 @@
     <title>Revenue Tracking</title>
     <!-- CSS -->
     <link rel="stylesheet" href="revenue.css">
-    <!-- Global Font Awesome -->
+    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -30,6 +30,7 @@
                 <option value="Weekly">Weekly</option>
                 <option value="Monthly">Monthly</option>
             </select>
+            <i class="fa-solid fa-download download-icon"></i>
         </div>
 
         <!-- Revenue Graphs Section -->
@@ -44,15 +45,17 @@
             </div>
         </div>
 
-        <!-- FORECAST TABLE -->
+        <!-- Forecast Table -->
         <div class="forecast_table">
             <h1>Forecast Data</h1>
             <div class="table-container">
                 <!-- Export Buttons -->
                 <div class="export-buttons d-flex">
-                    <button class="btn btn-export">Export</button>
-                    <button class="btn btn-export">PDF</button>               
-                    <button class="btn btn-export">Print</button>
+                    <button class="btn btn-export" onclick="exportToCSV()">CSV</button>
+                    <button class="btn btn-export" onclick="exportToPDF()">PDF</button>
+                    <button class="btn btn-export" onclick="printTable()">Print</button>
+                    <button class="btn btn-export" onclick="copyToClipboard()">Copy</button>
+                    <button class="btn btn-export" onclick="exportToExcel()">Excel</button>
                 </div>
 
                 <!-- Show Entries and Search Filter -->
@@ -97,6 +100,7 @@
     </div>
 
     <!-- JavaScript Files -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="revenue.js"></script>
 </body>
